src/App.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}
p {
  font-size: 18px;
  color: black;
}

.App {
  text-align: center;
}

.App-logo {
  height: 14vh;
  width: auto;
  pointer-events: none;
  padding: 5px;
  border-radius: 60%;
}

main {
  width: 100%;
}
 .wallpaper {
  width: 100%;
  background-position: center center; 
  background-attachment: fixed; 
  background-repeat: no-repeat; background-size: cover;
} 
.bannerarea ::before {
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.28);
}
.firstText span {
  position: relative;
  margin-top: 30px;
  top: 35%;
  left: 5%;
  transform: translate(-50%, -50%);
  font-size: 40px;
  font-weight: 700;
  color: white;
  animation: text-animate 6s linear forwards;
}
@keyframes text-animate {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.firstText p span:nth-child(1) {
  animation-delay: 0s;
}
.firstText p span:nth-child(2) {
  animation-delay: 0.5s;
}
.firstText p span:nth-child(3) {
  animation-delay: 1s;
}
.firstText p span:nth-child(4) {
  animation-delay: 1.5s;
}
.firstText p span:nth-child(5) {
  animation-delay: 2s;
}
.firstText p span:nth-child(6) {
  animation-delay: 2.5s;
}
.firstText p span:nth-child(7) {
  animation-delay: 3s;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: rgb(212, 182, 137);
}

.App-link {
  color: #61dafb;
}

.pull-left {
  padding-top: 3rem;
  position: relative;
  float: left;
  color: black;
  margin-right: 27rem;
  padding-right: 11rem;
}

.sticky-top {
  position: sticky;
  margin: 0px;
  z-index: 1020;
  background-color: #edeeec;
}

.navbar-light .navbar-nav .nav-link {
  color: #8f2634;
  font-weight: bold;
  font-size: 1.3rem;
  padding-right: 4px;
}

.FaFacebook {
  color: rgb(131, 17, 17);
  size: 6px;
}

.nav-link:hover {
  color: blue;
}

.bannerarea {
  position: relative;
  text-align: center;
  width: 100%;
  color: white;
  font-family: "Montserrat", sans-serif;
}

.wallpaper {
  width: 100%;
}

.firstText {
  position: absolute;
  margin-top: 30px;
  top: 45%;
  left: 45%;
  transform: translate(-50%, -50%);
  font-size: 35px;
  font-weight: 700;
  animation: text-animate 6s linear forwards;
}

.arrow {
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: cover;
  position: relative;
}

.footer {
  margin: auto;
  background-color: #858688;
  color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.bgdark {
  background: #f5ecec;
}

.images-content {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}
.img-item {
  margin: 10px;
  overflow: hidden;
  border-radius: 15px;
}
.img-item img {
  width: 300px;
  height: 300px;
  padding: 15px;
  transform-origin: 30% 45%;
  transition: transform 5s, filter 3s ease-in-out;
}
.img-item:hover img {
  transform: scale(1.15);
}
.arrow-img img {
  width: 230px;
  height: 230px;
  padding: 15px;
  transform-origin: 30% 45%;
  transition: transform 5s, filter 3s ease-in-out;
}
.arrow-img:hover img {
  transform: scale(1.15);
}
.box-cont p {
  text-align: center;
  line-height: 1.5em;
  margin: 0 auto;
  width: 70%;
}

#Visit-Us {
  margin: 0 auto;
  padding-top: 50px;
}
#Visit-Us h3,
#About-Us h3 {
  font-size: 30px;
  text-shadow: 2px 2px #d07f8a;
  padding-bottom: 20px;
}

div.contact-container {
  display: flex;
}
.bannerarea {
    background-position: center center; 
    background-attachment: fixed; 
    background-repeat: no-repeat; background-size: cover; 
   

}
.map {
  flex-basis: 70%;
  flex-shrink: 0;
}
.map-container {
  width: 100%;
}
.map-section {
  width: 75%;
  padding-left: 5px;
  display: flex;
}
.contact-section {
  width: 25%;
  padding-left: 20px;
  display: flex;
}
.contact-info {
  display: flex;
  margin: 10px;
  align-items: center;
  justify-content: flex-start;
}
.contact-info img {
  width: 40px;
  height: 40px;
  margin-right: 15px;
}
.contact-info p {
  padding-top: 10px;
  padding-left: 15px;
}
a :hover {
  color: blue;
}

.CVR {
  position: relative;
}

.inner-num {
  position: absolute;
  margin-left: 6px;
  text-align: center;
  color: white;
}
.contact-info a:hover {
  transition: 1s;
  color: #0839a1;
  text-decoration: underline;
}

.aboutusImage {
  border-radius: 2%;
  border: 1px Solid;
  box-shadow: 10px 10px rgb(133, 4, 4);
  padding: 1px;
  width: 97%;
  margin-left: 40px;
  margin-top: 20px;
}

.footer span {
  padding: 5px;
  font: 13px "lato", sans-serif;
  text-align: center;
}

.footer a {
  text-decoration: none;
  color: #bfeced;
}

.footer a:hover {
  text-decoration: none;
  color: #ff0;
}

@media screen and (max-width: 400px) {
  div.firstText {
    font-size: 20px;
  }
}

@media screen and (max-width: 580px) {
  div.firstText {
    font-size: 20px;
  }
}

@media screen and (max-width: 650px) {
 
  .bannerarea{
    background-image: url("./assets/images/banner.jpg");
  }
 
  .firstText span {
    font-size: 20px;
  }
}

@media screen and (max-width: 1050px) {
  .pull-left {
    padding-top: 3rem;
    position: relative;
    float: left;
    color: black;
    margin-right: 4rem;
  }
}

@media (min-width: 880px) {
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media screen and (max-width: 900px) {
  div.contact-container,.images-content {
    flex-direction: column;
  }
}

